--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+.next
 dist-ssr
 *.local
 
@@ -30,4 +30,4 @@ dist-ssr
 !.env.example
 
 # Local tooling/config
-.supabase/
+.supabase
