--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "next": "latest",
     "openai": "^5.12.2",
+    "qrcode.react": "^4.2.0",
     "react": "latest",
     "react-dom": "latest",
     "swr": "^2.3.6"
