--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode.react": "^4.2.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
